# harvest

./: .gitignore  CLAUDE.md  FIRST_PROMPT.md  README.md  pyproject.toml  test_router_manual.py
config/: providers.example.toml
scripts/: reaper_ipc_bridge.lua
src/harvest/: __init__.py
src/harvest/bridge/: __init__.py  fake_reaper.py  reaper.py
src/harvest/llm/: __init__.py  providers.py  router.py
src/harvest/mcp/: __init__.py  registry.py
src/harvest/mcp/tools/: __init__.py  fx.py  items.py  midi.py  tracks.py  transport.py
src/harvest/ui/: __init__.py  cli.py
tests/: __init__.py  test_bridge.py  test_router.py  test_tools.py
