[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harvest"
version = "0.1.0"
description = "Multi-LLM conversational agent for REAPER DAW"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "mcp>=1.0.0",
    "anthropic>=0.30.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "aiofiles>=23.2.1",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
]

[project.scripts]
reaper-agent = "harvest.ui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
